Corrected alignment issues some more

--- a/static/Styles/Steps.css
+++ b/static/Styles/Steps.css
@@ -31,6 +31,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100vh;
     overflow: hidden;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -42,13 +43,12 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
 }
 
 .content{
-    margin-top: 5rem;
+    margin-top: 1rem;
     position: absolute;
-    top: 2%;
+    top: 0%;
     opacity: 0;
     transition: opacity 0.4s ease-in-out;
 }
@@ -70,7 +70,7 @@ body {
 }
 
 .progress-container{
-    margin-top: 10rem;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     position: relative;
